src/objects/Construction__c.object
<CustomObject>
    <fields>
        <fullName>Member__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>現場メンバー</label>
        <referenceTo>Member__c</referenceTo>
        <relationshipLabel>工事案件</relationshipLabel>
        <relationshipName>Construction2Member</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OneWeekOlder__c</fullName>
        <formula>IF (  TimeLimit__c   &gt;  TODAY() , &quot;◎&quot;, &quot;×&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>処理期限超過</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProjectsNumber__c</fullName>
        <displayFormat>{0000000}</displayFormat>
        <externalId>true</externalId>
        <label>案件番号</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>ステータス</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1.見積提出</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>2.受注</fullName>
                </value>
                <value>
                    <fullName>3.施工着手</fullName>
                </value>
                <value>
                    <fullName>4.施工完了</fullName>
                </value>
                <value>
                    <fullName>5.請求書提出</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SubmitDay__c</fullName>
        <defaultValue>TODAY()</defaultValue>
        <label>前ステータス日付</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>TargetJobStatus__c</fullName>
        <label>工事ステータス番号</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TimeLimit__c</fullName>
        <formula>SubmitDay__c  + 8</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>次処理期限</label>
        <type>Date</type>
    </fields>
    <label>工事案件</label>
    <listViews>
        <fullName>All</fullName>
        <columns>OneWeekOlder__c</columns>
        <columns>NAME</columns>
        <columns>Member__c</columns>
        <columns>Status__c</columns>
        <columns>SubmitDay__c</columns>
        <columns>TimeLimit__c</columns>
        <columns>ProjectsNumber__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>greaterThan</operation>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>1.見積提出</value>
        </filters>
        <label>一年前</label>
    </listViews>
    <nameField>
        <label>工事案件名</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>